# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .gitignore  .justfile  README.md  canonical.just  dot_aliases  dot_aliases.tmpl  dot_env  dot_env.tmpl  dot_gitconfig  dot_gitconfig.canonical  dot_gitconfig.personal  dot_zshrc  init.just  justfile  justfile.canonical  justfile.chezmoi  justfile.ubuntu  server.just  ubuntu.just
.chezmoidata/: colors.toml  metadata.toml
.chezmoiscripts/: run_once_before_setup.sh  run_onchange_after_apply-themes.sh.tmpl
.colors/: everforest-hard-dark.toml  everforest-medium-light.toml  gruvbox-dark.toml  gruvbox-light-new.toml  gruvbox-light.toml  rose-pine-dawn-new.toml  rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml  test-new.toml  test.toml
.scripts/: canonical.just  script.just  ubuntu.just
.scripts/chezmoi-things/: justfile  pyproject.toml
.scripts/chezmoi-things/src/chezmoi_data/: cli.py  prompts.py
.scripts/chezmoi-things/src/chezmoi_theme/: cli.py  prompts.py
.scripts/chezmoi-things/src/models/: colors.py
dot_config/: dot_zeza_custom.eza  rofimoji.rc.tmpl  starship.toml.tmpl
dot_scripts/: executable_bitwarden-cli  executable_charmcraft-purge  executable_charmtool  executable_chezmoi-data  executable_chezmoi-extra  executable_chezmoi-theme  executable_gh-stats  executable_grimoire  executable_hledger-budget  executable_hledger-utils  executable_juju-utils  executable_lxc-shell  executable_mount-utils  executable_nerdfonts  executable_rockcraft-purge  executable_uv-venv
private_dot_ssh/: config.tmpl  private_config
(+205 files in other folders)
