[project]
name = "chezmoi-theme"
version = "0.1.0"
description = "chezmoi-theme"
authors = [
    {name = "Luca Bello", email = "lusgabello@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.23",
    "questionary>=2.1",
    "rich>=14.3",
    "coloraide>=8.1",
    "tomli-w>=1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pyright>=1.1.408",
    "codespell>=2.4.1",
    "vulture>=2.14",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "actionlint-py>=1.7.10.24",
    "uv-secure>=0.15.4",
]

[project.urls]
Homepage = "https://github.com/lucabello/{{project_name}}"
Documentation = "https://github.com/lucabello/{{project_name}}"
Repository = "https://github.com/lucabello/{{project_name}}"
Issues = "https://github.com/lucabello/{{project_name}}/issues"
Changelog = "https://github.com/lucabello/{{project_name}}/releases"

[project.scripts]
chezmoi-theme = "chezmoi_theme.cli:app"
chezmoi-data = "chezmoi_data.cli:app"

# Building and publishing
[build-system]
requires = ["uv_build>=0.9.2"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

# Tools configuration
[tool.ruff]
line-length = 99

[tool.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = ".git,build,venv*"
ignore-words-list = "assertIn"

[tool.vulture]
min_confidence = 80
